--- a/lectures/lecture_09_ml/notebooks/Ensembles.ipynb
+++ b/lectures/lecture_09_ml/notebooks/Ensembles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-15T14:03:25.203114Z",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-15T14:03:26.233535Z",
@@ -467,6 +467,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from ipywidgets import interact, IntSlider\n",
     "from sklearn.datasets import make_moons\n",
+    "import numpy as np\n",
     "\n",
     "def rf_demo(n_est=5):\n",
     "    rf = RandomForestClassifier(random_state=123, n_estimators=n_est)\n",
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-11-15T14:03:26.667116Z",
@@ -508,7 +509,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8296057fa75641b98964ae76813d05bb",
+       "model_id": "74a96d2f4f9a4730b761b13f0c077f9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -591,7 +592,7 @@
    "metadata": {},
    "source": [
     "Добавляем новый алгоритм к нашей композиции, минимизируя следующую ошибку:\n",
-    "$$err(h) = \\sum_{j=1}^N L\\left(y_i, \\sum_{i=1}^{T-1}b_i a_i(x_j) + b\\cdot a(x_j)\\right) \\to \\min_{a,b}$$"
+    "$$err(h) = \\sum_{j=1}^N L\\left(y_j, \\sum_{i=1}^{T-1}b_i a_i(x_j) + b\\cdot a(x_j)\\right) \\to \\min_{a,b}$$"
    ]
   },
   {
@@ -694,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
